<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_you">About You</string>
    <string name="accept">Accept</string>
    <string name="account_is_paused">Your account is currently paused. To message your matches, reactivate your account.</string>
    <string name="account_paused">Account Paused</string>
    <string name="accountkit_error_message_template" formatted="false">%s (%s)</string>
    <string name="action_retry">RETRY</string>
    <string name="ad_logo">Ad</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_company">Add Company</string>
    <string name="add_email_rational_explanation">This will be used to help you recover your account in case you forget your password.</string>
    <string name="add_email_to_secure_account">Please add an email to secure your account</string>
    <string name="add_job_title">Add Job Title</string>
    <string name="add_media">Add Media</string>
    <string name="add_password_to_secure_account">Please add a password to secure your account</string>
    <string name="add_school">Add School</string>
    <string name="added_by_friend_modal_button_text">See Who’s Going Out</string>
    <string name="added_by_friend_to_group_modal_title">%1$s added you to a group on Tinder Social</string>
    <string name="added_by_friends_friend_text_1_friend">%s.</string>
    <string name="added_by_friends_friend_text_2_friend">%1$s &amp; %2$s.</string>
    <string name="added_by_friends_friend_text_3_friend">%1$s, %2$s, &amp; %3$s.</string>
    <string name="age_in_settings_detail">Tinder uses these preferences to suggest matches. Some match suggestions may not fall within your desired parameters.</string>
    <string name="all_media">All</string>
    <string name="allow_group_add">Swipe with Friends</string>
    <string name="allow_later_button">Later</string>
    <string name="allow_location_button">Allow Location</string>
    <string name="allow_notification_button">Allow Notifications</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_matched">Already matched</string>
    <string name="alt_auth_disclaimer_content">"We’re constantly improving the app to make it better for everyone. Your feedback is important and will be taken into consideration for future app updates.
We’re working on other ways to sign up for Tinder.
Stay tuned."</string>
    <string name="alt_auth_disclaimer_title">Thanks for the feedback</string>
    <string name="and_all_the_features_of_tinder_plus">and all the features of Tinder+</string>
    <string name="apologies">Apologies!</string>
    <string name="app_id">464891386855067</string>
    <string name="app_name">Web Profile</string>
    <string name="app_settings">App Settings</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_username_delete">Are you sure you want to delete your username?</string>
    <string name="ask_delete_account">Delete Account?</string>
    <string name="ask_logout">Logout?</string>
    <string name="ask_me">Ask Me</string>
    <string name="auth_fb_disclaimer_text">We don’t post anything to Facebook.</string>
    <string name="auth_fb_disclaimer_title">We take your privacy seriously</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="autoplay_video">Autoplay Videos</string>
    <string name="autoplay_video_message">Playing videos use more data than displaying photos, so choose when videos autoplay here.</string>
    <string name="autoplay_video_never">Never Autoplay Videos</string>
    <string name="autoplay_video_wifi_mobile_data">On Wifi and Mobile Data</string>
    <string name="autoplay_video_wifi_only">On Wifi Only</string>
    <string name="badges_verified">Verified</string>
    <string name="best_photo">Best Photo</string>
    <string name="best_value">Best Value</string>
    <string name="birthdate">Birthdate</string>
    <string name="bitmoji_add_button_text">Add Bitmoji</string>
    <string name="bitmoji_auth_title">Snapchat</string>
    <string name="bitmoji_chat_input_icon">Bitmoji chat input icon</string>
    <string name="bitmoji_connect">Connect Bitmoji</string>
    <string name="bitmoji_disconnect_dialog_content">Your Bitmoji keyboard will no longer be available in chat.</string>
    <string name="bitmoji_disconnect_dialog_title">Disconnect Bitmoji</string>
    <string name="bitmoji_failure_notification_body">Tap to add Bitmoji again</string>
    <string name="bitmoji_failure_notification_title">Bitmoji Error</string>
    <string name="bitmoji_fallback_message">%s sent you a special message. Update the app to view the message.</string>
    <string name="bitmoji_keyboard">Bitmoji Keyboard</string>
    <string name="bitmoji_later_button_text">Maybe Later</string>
    <string name="bitmoji_loading_indicator">Bitmoji image loading indicator</string>
    <string name="bitmoji_logo">Bitmoji logo</string>
    <string name="bitmoji_main_title">Bitmoji</string>
    <string name="bitmoji_secondary_title">"Break the ice with Bitmojis and make
your conversations more fun!"</string>
    <string name="bitmoji_success_notification_body">Send a Bitmoji to a match in chat</string>
    <string name="bitmoji_success_notification_title">Bitmoji Connected</string>
    <string name="bitmoji_title_line_1">Introducing</string>
    <string name="bitmoji_tooltip_text_no_match_name">New! Send a Bitmoji</string>
    <string name="bitmoji_tooltip_text_with_match_name">New! Send a Bitmoji to %s</string>
    <string name="blend">Blend</string>
    <string name="blend_default">Default</string>
    <string name="block">Unmatch</string>
    <string name="blocked">Unmatched!</string>
    <string name="boost_again">boost again</string>
    <string name="boost_description">Be the top profile in your area for %d minutes to get more matches.</string>
    <string name="company">Company</string>
    <string name="control_your_profile_feature_one_title">Don’t Show My Age</string>
    <string name="control_your_profile_feature_two_title">Make My Distance Invisible</string>
    <string name="control_your_profile_title">Control Your Profile</string>
    <string name="create_group_no_friends_ask_to_unlock">Add Friends</string>
    <string name="current_work">Current Work</string>
    <string name="feed_setting_edit_profile_spotify_anthem">Control how you share your Spotify Anthem on Feed in &lt;font color=#A4C9F3>Settings&lt;/font>.</string>
    <string name="feed_setting_edit_profile_spotify_top_artists">Control how you share your Top Spotify Artists on Feed in &lt;font color=#A4C9F3>Settings&lt;/font>.</string>
    <string name="friend_footer_dont_see">Don’t see who you’re looking for?</string>
    <string name="friend_footer_your_friends_on_tinder_social">"Your friends on Tinder Social can invite you to go
out. Go to settings to change these permissions."</string>
    <string name="gender">Gender</string>
    <string name="instagram_auth_title">Show my Instagram Photos</string>
    <string name="instagram_login">Connect Instagram</string>
    <string name="instagram_logout">Disconnect</string>
    <string name="job_title">Job Title</string>
    <string name="man">Man</string>
    <string name="manage_ad_message_preferences_cautionary_text">"Messages are re-enabled if you delete the
app or get a new device"</string>
    <string name="manage_ad_message_preferences_confirm_button_text">CONFIRM</string>
    <string name="manage_ad_message_preferences_secondary_text">SHOW ME</string>
    <string name="manage_ad_message_preferences_title">"Manage Ad Message
Preferences"</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="not_now">Not Now</string>
    <string name="post_group_expire_text">"Your group and group matches
 have just expired."</string>
    <string name="recommend_to_a_friend">Recommend to a Friend</string>
    <string name="report">Report</string>
    <string name="school">School</string>
    <string name="select_schools">Select Schools</string>
    <string name="select_work">Select Work</string>
    <string name="sms_auth_continue">Continue</string>
    <string name="sms_auth_country_code">Country</string>
    <string name="sms_auth_legal_disclaimer">When you tap Continue, Tinder will send a text with verification code. Message and data rates may apply. The verified phone number can be used to login. &lt;a href=#sms-auth-legal-faq-link>Learn what happens when your number changes.&lt;/a></string>
    <string name="sms_auth_phone_number">Phone Number</string>
    <string name="sms_auth_phone_number_title">My number is</string>
    <string name="social_enabled_modal_description">Invite friends to go out and connect with other groups also going out.</string>
    <string name="social_enabled_modal_no_button_text">Not Now</string>
    <string name="social_enabled_modal_title">Are you going out tonight?</string>
    <string name="social_enabled_modal_yes_button_text">I’m Going Out</string>
    <string name="social_opt_in_enable_tinder_social">Enable Tinder Social</string>
    <string name="social_opt_in_learn_more">Learn More</string>
    <string name="social_opt_in_text">"Start a group with your friends to match with
other groups of friends on Tinder Social"</string>
    <string name="unmute_notifications">Unmute Notifications</string>
    <string name="user_menu_group_expired_button">Create Your Group</string>
    <string name="woman">Woman</string>
    <string name="you_are_no_longer_out">You’re no longer out.</string>
</resources>