<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="@dimen/block_report_dialog_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tinder.views.CustomTextView android:id="@id/btn_mute" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mute_notifications" style="@style/button_dialog" />
    <com.tinder.views.CustomTextView android:id="@id/btn_un_mute" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unmute_notifications" style="@style/button_dialog" />
    <com.tinder.views.CustomTextView android:id="@id/btn_recommend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/recommend_to_a_friend" style="@style/button_dialog" />
    <View android:id="@id/view_separator1" android:background="@color/gray_very_very_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
    <com.tinder.views.CustomTextView android:id="@id/btn_report" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report" style="@style/button_dialog" />
    <View android:id="@id/view_separator2" android:background="@color/gray_very_very_light" android:layout_width="fill_parent" android:layout_height="@dimen/nav_divider_height" />
    <com.tinder.views.CustomTextView android:id="@id/btn_unmatch" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/block" style="@style/button_dialog" />
</LinearLayout>