<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:id="@id/actionbar_menu" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar_edit_profile" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="parallax" app:layout_scrollFlags="enterAlways|scroll" />
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/actionbar_menu" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_edit_profile" android:paddingBottom="@dimen/padding_med" android:focusableInTouchMode="true" android:clipChildren="false" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.tinder.fragments.EditProfilePhotoView android:id="@id/edit_profile_photo" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <com.tinder.account.photos.CurrentUserPhotosView android:id="@id/current_user_photos" android:visibility="gone" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/photo_grid_view_top_margin" />
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_bio" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/item_indent_left">
                <TextView android:textSize="@dimen/text_s" android:id="@id/about_me" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/item_indent_left" android:text="@string/about_you" android:textAllCaps="false" android:fontFamily="@font/proximanova_semibold" style="@style/profile_header" />
                <RelativeLayout android:paddingTop="@dimen/padding_med" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/margin_xsmall" android:layout_weight="1.0" style="@style/edit_profile_selection">
                    <com.tinder.views.CustomEditText android:textSize="@dimen/text_s" android:textColor="@color/z_profile_body_text" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/editText_bio" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/about_you" android:layout_alignParentTop="true" android:inputType="textCapSentences|textMultiLine" />
                    <TextView android:textSize="@dimen/text_xxs" android:textColor="@color/text_dark" android:gravity="right" android:id="@id/textView_chars_remaining" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/editText_bio" android:layout_alignParentBottom="true" android:contentDescription="profile_edit_bio_chars_remaining_text" android:fontFamily="@font/proximanova_semibold" />
                </RelativeLayout>
            </LinearLayout>
            <com.tinder.profile.view.EditProfileSingleLineEntryView android:id="@id/edit_profile_work" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_indent_left" app:entry_editable="false" app:entry_header_text="@string/current_work" app:entry_text="@string/select_work" />
            <com.tinder.profile.view.EditProfileSingleLineEntryView android:id="@id/edit_profile_job_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_indent_left" app:entry_editable="true" app:entry_header_text="@string/job_title" app:entry_hint="@string/add_job_title" />
            <com.tinder.profile.view.EditProfileSingleLineEntryView android:id="@id/edit_profile_job_company" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_indent_left" app:entry_editable="true" app:entry_header_text="@string/company" app:entry_hint="@string/add_company" />
            <com.tinder.profile.view.EditProfileSingleLineEntryView android:id="@id/edit_profile_education" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/item_indent_left" app:entry_editable="false" app:entry_header_text="@string/school" app:entry_text="@string/select_schools" />
            <com.tinder.profile.view.EditProfileSingleLineEntryView android:id="@id/edit_profile_sms_education" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/item_indent_left" app:entry_editable="true" app:entry_header_text="@string/school" app:entry_hint="@string/add_school" />
            <com.tinder.profile.view.ProfileBitmojiAuthView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxsmall">
                <TextView android:textSize="@dimen/text_s" android:id="@id/instagram_title" android:paddingLeft="@dimen/item_indent_left" android:paddingTop="@dimen/item_indent_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instagram_auth_title" android:textAllCaps="false" android:fontFamily="@font/proximanova_semibold" style="@style/profile_header" />
                <RelativeLayout android:id="@id/instagram_container" android:background="@drawable/rectangle_touch_feedback_white_background" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxsmall" style="@style/edit_profile_selection">
                    <TextView android:textSize="@dimen/text_s" android:textColor="@color/tinder_red" android:id="@id/button_instagram_auth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instagram_login" android:layout_toLeftOf="@id/disconnect_button" android:layout_alignParentLeft="true" android:fontFamily="@font/proximanova_semibold" />
                    <TextView android:textSize="@dimen/text_s" android:textColor="@color/text_dark" android:id="@id/disconnect_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instagram_logout" android:layout_alignParentRight="true" android:fontFamily="@font/proximanova_semibold" />
                    <ProgressBar android:id="@id/progress_web" android:layout_width="@dimen/progress_inline_size" android:layout_height="@dimen/progress_inline_size" android:layout_marginRight="@dimen/margin_large" android:indeterminateDrawable="@drawable/progress_reporting" android:layout_alignParentRight="true" />
                </RelativeLayout>
            </LinearLayout>
            <com.tinder.spotify.views.SpotifyThemeSongView android:id="@id/edit_profile_theme_song" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.tinder.editprofile.view.EditFeedSettingItemView android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/feed_setting_edit_profile_spotify_anthem" style="@style/edit_profile_padding" />
            <com.tinder.spotify.views.SpotifyConnectView android:id="@id/edit_profile_spotify_connect" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.tinder.editprofile.view.EditFeedSettingItemView android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/feed_setting_edit_profile_spotify_top_artists" style="@style/edit_profile_padding" />
            <TextView android:textSize="@dimen/text_s" android:id="@id/edit_profile_gender_header" android:paddingLeft="@dimen/item_indent_left" android:paddingTop="@dimen/item_indent_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gender" android:textAllCaps="false" android:fontFamily="@font/proximanova_semibold" style="@style/profile_header" />
            <FrameLayout android:id="@id/edit_profile_gender_radios_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" style="@style/edit_profile_selection">
                <RadioGroup android:id="@id/edit_profile_gender_radios" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.tinder.views.CustomRadioButton android:textSize="@dimen/text_s" android:textColor="@color/text_dark" android:id="@id/gender_male" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/man" />
                    <com.tinder.views.CustomRadioButton android:textSize="@dimen/text_s" android:textColor="@color/text_dark" android:id="@id/gender_female" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:text="@string/woman" />
                </RadioGroup>
            </FrameLayout>
            <TextView android:textSize="17.0sp" android:textColor="@color/gray" android:id="@id/edit_profile_i_am" android:background="@drawable/rectangle_touch_feedback_white_background" android:paddingLeft="@dimen/item_indent_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" android:fontFamily="@font/proximanova_regular" style="@style/edit_profile_selection" />
            <TextView android:textSize="@dimen/text_s" android:id="@id/control_your_profile_title" android:paddingLeft="@dimen/item_indent_left" android:paddingTop="@dimen/item_indent_left" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_your_profile_title" android:drawableRight="@drawable/edit_profile_tinder_plus" android:drawablePadding="@dimen/margin_small" android:textAllCaps="false" android:fontFamily="@font/proximanova_semibold" style="@style/profile_header" />
            <LinearLayout android:orientation="vertical" android:id="@id/control_your_profile_container" android:paddingLeft="@dimen/item_indent_left" android:paddingRight="@dimen/item_indent_left" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" android:layout_marginBottom="@dimen/margin_xsmall" style="@style/edit_profile_selection">
                <RelativeLayout android:id="@id/hide_age_container" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip">
                    <TextView android:textSize="@dimen/text_s" android:textColor="@color/text_dark" android:id="@id/hide_age_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_your_profile_feature_one_title" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:fontFamily="@font/proximanova_regular" />
                    <com.tinder.views.CustomSwitch android:id="@id/hide_age_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/settings_group_item" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/hide_distance_container" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small">
                    <TextView android:textSize="@dimen/text_s" android:textColor="@color/text_dark" android:id="@id/hide_distance_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/control_your_profile_feature_two_title" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:fontFamily="@font/proximanova_regular" />
                    <com.tinder.views.CustomSwitch android:id="@id/hide_distance_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/settings_group_item" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>