<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@id/sms_auth_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/myNumberLabel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sms_auth_phone_number_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Text.Large" />
    <EditText android:gravity="center" android:id="@id/countryCodeInputView" android:focusable="false" android:layout_width="wrap_content" android:layout_height="@dimen/space_xxl" android:layout_marginTop="@dimen/space_xxl" android:minWidth="@dimen/space_xxxxl" android:hint="@string/sms_auth_country_code" android:cursorVisible="false" android:maxLines="1" android:drawablePadding="@dimen/space_xxxs" android:inputType="text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/myNumberLabel" style="@style/Text.Medium" />
    <EditText android:id="@id/phoneNumberInputView" android:layout_width="wrap_content" android:layout_height="@dimen/space_xxl" android:layout_marginTop="@dimen/space_xxl" android:hint="@string/sms_auth_phone_number" android:maxLines="1" android:ems="10" android:inputType="number" android:layout_marginStart="@dimen/space_xs" app:layout_constraintStart_toEndOf="@id/countryCodeInputView" app:layout_constraintTop_toBottomOf="@id/myNumberLabel" style="@style/Text.Medium" />
    <TextView android:id="@id/messageLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_xxl" android:text="@string/sms_auth_legal_disclaimer" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/phoneNumberInputView" style="@style/Text.Disclaimer" />
    <Button android:enabled="false" android:id="@id/continueButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_s" android:text="@string/sms_auth_continue" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/messageLabel" style="@style/Button.Continue" />
</merge>