<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.tinder.views.CustomTextView android:text="@string/social_opt_in_enable_tinder_social" style="@style/Tindered.ProfileTab.StateHeader" />
        <com.tinder.views.CustomTextView android:text="@string/social_opt_in_text" style="@style/Tindered.ProfileTab.StateText" />
        <android.support.v7.widget.SwitchCompat android:layout_gravity="center" android:id="@id/social_opt_in_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:checked="false" android:thumb="@drawable/social_opt_in_switch_handle" />
        <com.tinder.views.CustomTextView android:textSize="14.0dip" android:textColor="#ffbac5da" android:layout_gravity="center" android:id="@id/social_opt_in_learn_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/social_opt_in_learn_more" android:textAllCaps="true" app:customFontStyle="semi_bold" />
    </LinearLayout>
</merge>